--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^4.11.3",
+    "@material-ui/icons": "^4.11.2",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
     "bootstrap": "^4.6.0",
+    "chartist": "^0.11.4",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-chartist": "^0.14.4",
     "react-dom": "^17.0.1",
+    "react-minimal-side-navigation": "^1.8.0",
+    "react-perfect-scrollbar": "^1.5.8",
+    "react-pro-sidebar": "^0.6.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.1.0"
   },
