--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "frontend",
   "version": "0.1.0",
+  "homepage": "http://search.zerozero.pt/",
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
