--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^1.5.1",
     "react-chartist": "^0.14.4",
     "react-dom": "^17.0.1",
+    "react-helmet": "^6.1.0",
     "react-minimal-side-navigation": "^1.8.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-pro-sidebar": "^0.6.0",
