Redirects from QUERY to PAGE and ALL to QUERY

--- a/.gitignore
+++ b/.gitignore
@@ -145,3 +145,5 @@ node_modules/util-deprecate/LICENSE
 node_modules/util-deprecate/node.js
 node_modules/util-deprecate/package.json
 node_modules/util-deprecate/README.md
+frontend/package.json
+frontend/package-lock.json
