--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,7 +9,7 @@
     "@devexpress/dx-react-chart": "^2.7.5",
     "@devexpress/dx-react-chart-material-ui": "^2.7.5",
     "@devexpress/dx-react-core": "^2.7.5",
-    "@material-ui/core": "^4.11.3",
+    "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/pickers": "^3.3.10",
     "@nivo/core": "^0.67.0",
@@ -17,19 +17,26 @@
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.8.3",
+    "apexcharts": "^3.26.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^3.1.1",
     "chartist": "^0.11.4",
     "date-fns": "^2.0.0-beta.5",
+    "qs": "^6.10.1",
     "react": "^17.0.1",
+    "react-apexcharts": "^1.3.9",
     "react-bootstrap": "^1.5.1",
     "react-chartist": "^0.14.4",
+    "react-chartjs-2": "^3.0.2",
     "react-dom": "^17.0.1",
+    "react-google-charts": "^3.0.15",
     "react-helmet": "^6.1.0",
     "react-minimal-side-navigation": "^1.8.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-pro-sidebar": "^0.6.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "recharts": "^2.0.9",
     "web-vitals": "^1.1.0"
   },
   "scripts": {
